--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.2.2",
+    "@shopify/polaris": "^4.13.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
+    "history": "^4.10.1",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.7.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-mapbox-gl": "^4.8.2",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
